--- a/demo/editor.html
+++ b/demo/editor.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>sample</title>
-        <link rel="stylesheet" href="/css/editor.css">
+        <link rel="stylesheet" href="./css/editor.css">
         <script src="./script/caret.js"></script>
         <script src="./script/auto-complete.js"></script>
         <script src="./script/editor.js"></script>
@@ -10,7 +10,7 @@
     <body>
         <div id="editor" contenteditable></div>
     </body>
-<div id="autoComplete" style="display:none"></div>
+    <div id="autoComplete" style="display:none"></div>
 </html>
 
 
