--- a/demo/editor.html
+++ b/demo/editor.html
@@ -3,8 +3,8 @@
     <head>
         <title>sample</title>
         <link rel="stylesheet" href="./css/editor.css">
-        <script src="./script/caret.js"></script>
-        <script src="./script/auto-complete.js"></script>
+        <script src="../caret.js"></script>
+        <script src="../auto-complete.js"></script>
         <script src="./script/editor.js"></script>
     </head>
     <body>
